# pathlib2

./: .gitignore  AI_CONTEXT.md  README.md  coverage.xml  pyproject.toml  pytest.ini
src/pathlib2/: pathlib2.py
src/pdir/: pdirpath.py
test/: test_case_sensitivity.py  test_glob_coverage.py  test_glob_file_dir_defaults.py  test_legacy_compat.py  test_pathlib2.py  test_pdirpath.py
